<resources>
    <string name="app_name">HealthStride</string>
    <string name="what_is_blood_pressure">What is Blood Pressure?</string>
    <string name="answer_to_blood_pressure">Blood pressure is a measurement used in medicine. In the body, the arteries carry blood away from the heart. As blood travels through the arteries, it presses against the walls of the arteries. Blood pressure measures how hard the blood is pushing against the walls of the arteries. ... The first is the systolic pressure.
    </string>
    <string name="what_is_stress">What is Stress?</string>
    <string name="answer_to_stress">Stress is the body reaction to any change that requires an adjustment or response. The body reacts to these changes with physical, mental, and emotional responses. Stress is a normal part of life. ... Even positive life changes such as a promotion, a mortgage, or the birth of a child produce stress.
</string>
    <string name="what_are_the_different_types_of_stress">What are the different types of stress</string>
    <string name="answer_of_stress">According to the American Psychological Association, the three types of stress — acute stress, episodic acute stress, and chronic stress — can all make us feel out of sorts or even ill, but chronic stress is often ignored. Acute Stress.</string>
    <string name="card_view_string_1">A normal diastolic blood pressure is lower than 80. But even if your diastolic number is lower than 80, you can have elevated blood pressure if the systolic reading is 120-129.

80-89 is stage 1 hypertension.

90 or more is stage 2 hypertension.

120 or more is a hypertensive crisis. Call 911.</string>
    <string name="symptoms_of_high_blood_pressure">
        Severe headache,
Fatigue or confusion,
Vision problems,
Chest pain,
Difficulty breathing,
Irregular heartbeat,
Blood in the urine,
Pounding in your chest, neck, or ears</string>
    <string name="symptoms_of_low_blood_pressure">
        Dizziness or lightheadedness,
Fainting (syncope),
Blurred vision,,
Nausea,
Fatigue,
Lack of concentration
    </string>
    <string name="injury_defination">noun. Injury is defined as harm to a person or thing. An example of an injury is breaking your leg in a soccer game. An example of an injury is hurting someone reputation.</string>
    <string name="what_is_three_type_of_injuries">Three types of injuries: acute, overuse and chronic
Common examples include wrist fractures, ankle sprains, shoulder strains dislocations, and muscle strains.</string>
    <string name="what_are_seven_sport_injuries">Ankle sprain,
Groin pull,
Hamstring strain,
Shin splints,
Knee injury: ACL tear,
Knee injury: Patellofemoral syndrome — injury resulting from the repetitive movement of your kneecap against your thigh bone.
Tennis elbow (epicondylitis)</string>
    <string name="symptoms_of_moderate_head_injury">
        Symptoms of a moderate head injury include:

passing out for a short time
confusion or distraction
vomiting
a lasting headache
temporary changes in behavior
memory problems
loss of balance
    </string>
    <string name="symptoms_of_severe_head_injury">Symptoms of a severe head injury include:

significant bleeding
passing out and not waking up
having a seizure
problems with vision, taste, or smell
difficulty staying alert or awake
clear fluid or blood coming out of the ears or nose
bruises behind the ears
weakness or numbness
difficulty speaking</string>
    <string name="when_to_see_a_doctor">Moderate and severe head injuries require immediate treatment. If the symptoms of a mild head injury last for more than 2 weeks, a person should also seek medical advice.

The symptoms of a concussion do not always appear immediately. Sometimes, a person may develop initial symptoms days or weeks after the injury.

People should always take head injuries seriously. If someone is concerned about their symptoms, even after a mild injury, they should speak to a doctor.</string>

    <string name="what_are_the_different_types_of_sleep_disorder">What are the different types of sleep disorder?</string>
    <string name="answer_of_sleep_disorder">1.Obstructive Sleep Apnea (OSA) .
Upper 2.Upper Airway Resistance Syndrome (UARS) .
Perio3.periodic Limb Movement Disorder (PLMD) .
Restl4.Restless leg syndrome (RLS) .
Narco5.narcolepsy.
REM S6.REM Sleep Behaviour Disorder.
Insom7 Insomnia.</string>

    <string name="what_is_sleep_problem">What is sleep problem?</string>
    <string name="answer_of_sleep_problem">Sleep Disorders. ... An Overview of Insomnia Insomnia is a sleep disorder that is characterized by difficulty falling and/or staying asleep. Hypersomnia (Daytime Sleepiness) Hypersomnia, or excessive sleepiness, is a condition in which a person has trouble staying awake during the day.</string>
    <string name="what_are_the_most_common_cause_of_sleep_problem">What are the most common cause of sleep problem?</string>
    <string name="answer_of_cause_of_sleep_problem">Long-term or chronic insomnia (insomnia that occurs at least three nights a week for a month or longer) can be caused by factors such as depression, chronic stress, and pain or discomfort at night. A common cause of chronic insomnia is a conditioned emotional response.</string>

<string name="What_is_5_food_safety_rules">5 Food Safety Rules In The Kitchen
Rule 1: Wash hands between steps. ...
Rule 2: Sanitize work surfaces. ...
Rule 3: Use separate cutting boards for raw meats, vegetables and produce, and cooked foods. ...
Rule 4: Cook foods to safe temperatures. ...
Rule 5: Keep hot foods hot and cold foods cold. ...
Related Pages You May Enjoy.</string>
    <string name="What_is_food_safety_why_is_important">Food safety is about producing, handling, storing and preparing food in such a way as to prevent infection and contamination in the food production chain, and to help ensure that food quality and wholesomeness are maintained to promote good health.</string>
<string name="What_are_the_10_rules_for_safe_food_practice">Their power to change habitual practices will be all the greater.
Choose foods processed for safety. ...
Cook food thoroughly. ...
Eat cooked foods immediately. ...
Store cooked foods carefully. ...
Reheat cooked foods thoroughly. ...
Avoid contact between raw foods and cooked foods. ...
Wash hands repeatedly.</string>
    <string name="How_can_food_safety_be_improved">5 Easy Ways to Improve Food Safety in 2018
Start a Food Rotation Program. To comply with the FDA Food Code, you need to implement a food rotation program. ...
2. Make sure your staff is Food Handler certified.
Add More First Aid Stations. Working in the food industry can be dangerous. ...
Update Employee Training. ...
Keep Food at Safe Temperatures.</string>
    <string name="What_is_depression">Depression (major depressive disorder or clinical depression) is a common but serious mood disorder. It causes severe symptoms that affect how you feel, think, and handle daily activities, such as sleeping, eating, or working. To be diagnosed with depression, the symptoms must be present for at least two weeks.</string>
    <string name="symptoms_of_depression">Signs and Symptoms:
If you have been experiencing some of the following signs and symptoms most of the day, nearly every day, for at least two weeks, you may be suffering from depression:

Persistent sad, anxious, or “empty” mood
Feelings of hopelessness, or pessimism
Irritability
Feelings of guilt, worthlessness, or helplessness
Loss of interest or pleasure in hobbies and activities
Decreased energy or fatigue
Moving or talking more slowly
Feeling restless or having trouble sitting still
Difficulty concentrating, remembering, or making decisions
Difficulty sleeping, early-morning awakening, or oversleeping
Appetite and/or weight changes
Thoughts of death or suicide, or suicide attempts
Aches or pains, headaches, cramps, or digestive problems without a clear physical cause and/or that do not ease even with treatment</string>
</resources>