<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".healthtopics.SleepDifficulties">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            android:padding="5dp"
            app:cardBackgroundColor="@color/card_View_background_color">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="12sp"
                android:padding="5dp"
                android:text="@string/what_is_sleep_problem"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="5dp"
                android:textColor="@color/text_view_content_color"
                android:textSize="12sp"
                android:text="Sleep Disorders. ... An Overview of Insomnia Insomnia is a sleep disorder that is characterized by difficulty falling and/or staying asleep. Hypersomnia (Daytime Sleepiness) Hypersomnia, or excessive sleepiness, is a condition in which a person has trouble staying awake during the day.">
            </TextView>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:padding="5dp"
                app:cardBackgroundColor="@color/card_View_background_color">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:textSize="12sp"
                        android:padding="5dp"
                        android:text="@string/what_are_the_different_types_of_sleep_disorder"></TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:textColor="@color/text_view_content_color"
                        android:textSize="12sp"
                        android:text="1.Obstructive Sleep Apnea (OSA).2.Upper Airway Resistance Syndrome (UARS).3.Periodic Limb Movement Disorder (PLMD).4.Restless leg syndrome (RLS).5.Narcolepsy. 6.REM Sleep Behaviour Disorder.7.Insomnia."></TextView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:padding="5dp"
                app:cardBackgroundColor="@color/card_View_background_color">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:textSize="12sp"
                        android:padding="5dp"
                        android:text="@string/what_are_the_most_common_cause_of_sleep_problem"></TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:textColor="@color/text_view_content_color"
                        android:textSize="12sp"
                        android:text="Long-term or chronic insomnia (insomnia that occurs at least three nights a week for a month or longer) can be caused by factors such as depression, chronic stress, and pain or discomfort at night. A common cause of chronic insomnia is a conditioned emotional response.">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>